Fix flex align. Add social icons

--- a/src/components/Logo-hero/logoHero.module.scss
+++ b/src/components/Logo-hero/logoHero.module.scss
@@ -22,14 +22,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   & > img {
     width: 349px;
   }
 }
 .cityLogo {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   .legend {
     padding-right: 15px;
     p {
